Bug 447045 - Brushes with kind of low Density has bad visibility on canvas
Summary: Brushes with kind of low Density has bad visibility on canvas
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: 5.0.0-beta5
Platform: Other Microsoft Windows
: NOR minor
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords: regression
: 452085 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-12-15 22:32 UTC by Stig (Rakurri)
Modified: 2022-05-16 23:51 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Note the black-ish circle (383.23 KB, image/png)
2021-12-15 22:32 UTC, Stig (Rakurri)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stig (Rakurri) 2021-12-15 22:32:38 UTC
Created attachment 144586 [details]
Note the black-ish circle

SUMMARY
Brushes with kind of low Density has bad visibility on canvas and appear as a kind of dark and muddy overlay, this did not happen in Krita 4

STEPS TO REPRODUCE
1.  Make an "Auto" brush that has a Density value of around 30% 
2.  Make it large and hover it over the canvas with preview outline enabled.

OBSERVED RESULT
It covers most of the surface area and makes it hard to see your results, especially when using Smudge brushes.

EXPECTED RESULT
Thin outline like other brushes

SOFTWARE/OS VERSIONS
Krita 5.0.0-beta5 Windows 10
Comment 1 stephen 2022-02-04 14:50:28 UTC
(In reply to Stig (Rakurri) from comment #0)
> Created attachment 144586 [details]
> Note the black-ish circle
> 
> SUMMARY
> Brushes with kind of low Density has bad visibility on canvas and appear as
> a kind of dark and muddy overlay, this did not happen in Krita 4
> 
> STEPS TO REPRODUCE
> 1.  Make an "Auto" brush that has a Density value of around 30% 
> 2.  Make it large and hover it over the canvas with preview outline enabled.
> 
> OBSERVED RESULT
> It covers most of the surface area and makes it hard to see your results,
> especially when using Smudge brushes.
> 
> EXPECTED RESULT
> Thin outline like other brushes
> 
> SOFTWARE/OS VERSIONS
> Krita 5.0.0-beta5 Windows 10

It's not just that. There's also a serious performance lag along with this issue. 
Constant stuttering which apparently has to do only with the "preview outline" option, whenever the brush tip is complex.
Comment 2 Dmitry Kazakov 2022-03-16 09:01:18 UTC
Git commit ed61d91641e08bb211300f9648eb22a996b91355 by Dmitry Kazakov.
Committed on 16/03/2022 at 09:00.
Pushed by dkazakov into branch 'master'.

Don't try to generate a precise brush outline for low-density brushes

It generates messy outline, paiters don't like them. Though outlines
will still be messy if the user sets "spikes" value higher than 2 and
activates low density.

M  +2    -2    libs/brush/kis_auto_brush.cpp

https://invent.kde.org/graphics/krita/commit/ed61d91641e08bb211300f9648eb22a996b91355
Comment 3 Dmitry Kazakov 2022-03-31 13:45:10 UTC
Git commit 14c2be56edf24dcccf260b75d3d1a0716fe9bcb1 by Dmitry Kazakov.
Committed on 31/03/2022 at 13:43.
Pushed by dkazakov into branch 'krita/5.0'.

Don't try to generate a precise brush outline for low-density brushes

It generates messy outline, paiters don't like them. Though outlines
will still be messy if the user sets "spikes" value higher than 2 and
activates low density.

M  +2    -2    libs/brush/kis_auto_brush.cpp

https://invent.kde.org/graphics/krita/commit/14c2be56edf24dcccf260b75d3d1a0716fe9bcb1
Comment 4 Lynx3d 2022-05-16 23:51:33 UTC
*** Bug 452085 has been marked as a duplicate of this bug. ***