Don't try to generate a precise brush outline for low-density brushes

It generates messy outline, paiters don't like them. Though outlines
will still be messy if the user sets "spikes" value higher than 2 and
activates low density.

BUG:447045