libs/brush/kis_auto_brush.cpp
@@ -367,8 +367,8 @@ qreal KisAutoBrush::randomness() const
 
 QPainterPath KisAutoBrush::outline() const
 {
-    const bool complexOutline = d->density < 1.0 || d->shape->spikes() > 2;
-    if (!complexOutline) {
+    const bool requiresComplexOutline = d->shape->spikes() > 2;
+    if (!requiresComplexOutline) {
         QPainterPath path;
         QRectF brushBoundingbox(0, 0, width(), height());
         if (maskGenerator()->type() == KisMaskGenerator::CIRCLE) {
